Update navigation UI and logic with arrival dialog, route snapping improvements, and resource refactoring
- Implement `ArrivalDialog` with a 5-second auto-dismiss timer and trip duration summary
- Enhance `NavigationManager` to calculate progress and remaining distance based on path consistency
- Improve camera behavior with path-based bearing calculations, smoothing, and debouncing
- Add `CustomTextOutlineView` for better speed display visibility
- Update `NavigationActivity` layout with redesigned instruction cards, progress bars, and junction icons
- Refactor network package structure and rename several navigation-related drawable resources
- Add new vector assets for highway transitions and various maneuver types (e.g., merge, overpass, underpass)
- Adjust arrival detection threshold and speed display logic for better accuracy

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,8 +30,8 @@
     <string name="navigation_current_location">현위치로</string>
     <string name="navigation_full_route">전체 경로</string>
     <string name="navigation_destination">도착지</string>
-    <string name="navigation_remaining_distance">남은 거리: %1$s</string>
-    <string name="navigation_remaining_time">남은 시간: %1$s</string>
-    <string name="navigation_speed_format">%1$d km/h</string>
-    <string name="navigation_speed_unknown">-- km/h</string>
+    <string name="navigation_remaining_distance">%1$s km</string>
+    <string name="navigation_remaining_time">%1$s</string>
+    <string name="navigation_speed_format">%1$d</string>
+    <string name="navigation_speed_unknown">0</string>
 </resources>
